--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,8 @@ version = project.mod_version
 group = project.maven_group
 
 repositories {
+    mavenCentral()
+
     // Add repositories to retrieve artifacts from in here.
     // You should only use this when depending on other mods because
     // Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
@@ -19,6 +21,11 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.junit.jupiter:junit-jupiter:5.9.0'
+    implementation 'org.mockito:mockito-junit-jupiter:4.11.0'
+    implementation 'org.mockito:mockito-core:4.11.0'
+    implementation 'org.assertj:assertj-core:3.23.1'
+
     // To change the versions see the gradle.properties file
     minecraft "com.mojang:minecraft:${project.minecraft_version}"
     mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
@@ -82,4 +89,8 @@ publishing {
         // The repositories here will be used for publishing your artifact, not for
         // retrieving dependencies.
     }
+}
+
+test {
+    useJUnitPlatform()
 }
