--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -42,16 +42,10 @@ jobs:
       - name: Build
         run: ./gradlew clean build
  
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      ...
-      
       - name: Publish (CurseForge/Modrinth/Github)
         uses: Kir-Antipov/mc-publish@v3.2                                   #The specified MC-Publish Github Action in the version 3.2
         with:
-          curseforge-id: 123456                                             #The id of your curseforge project
+          curseforge-id: 810984
           curseforge-token: "${{env.CURSEFORGE_TOKEN}}"
           
           modrinth-id: iyxYrL9K                                             #The id of your modrinth project
