--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -3,12 +3,12 @@ name: Publish on Github, Curseforge & Modrinth    #The name of your Github Actio
 on: [ pull_request, workflow_dispatch ]           #When your Github Action will be executed ('pull_request' -> on every Merge(/Pull) Request; 'workflow_dispatch' -> allows manual execution through Github.com
 
 env:                                              #Environment variables that can later be referenced using ${{ env.MINECRAFT_VERSION }}. These are useful for repeating information and allow for quick changes for new mod updates
-  VERSION: 1.2+1.19.3
-  RELEASE_NAME: Philter Mod 1.2 for Minecraft 1.19.3
+  VERSION: 1.3+1.19.3
+  RELEASE_NAME: Philter Mod 1.3 for Minecraft 1.19.3
   MINECRAFT_VERSION: 1.19.3
   JAVA_VERSION: 17
 
-  GITHUB_TAG: 1.2+1.19.3
+  GITHUB_TAG: 1.3
   MODRINTH_TOKEN: ${{ secrets.PUBLISH_MODRINTH_TOKEN }}
   CURSEFORGE_TOKEN: ${{ secrets.PUBLISH_CURSEFORGE_TOKEN }}
   GITHUB_TOKEN: ${{ secrets.PUBLISH_GITHUB_TOKEN }}
