--- a/gradle.properties
+++ b/gradle.properties
@@ -11,5 +11,5 @@ fabric_version=0.76.0+1.19.4
 
 # Mod Properties
 archives_base_name=philter
-mod_version=1.3.1
+mod_version=1.3.1+1.19.4
 maven_group=net.simplx
